# re

./: .gitignore  .gitlab-ci-job-templates.yaml  .gitlab-ci.yml  formatterSOL.py  main.py  querySOL.sql  queryUAS.sql
cli/: migrate_batch_rename.py  pipeline-bootstrap.sh  run-dataflow-job-from-local.sh  run-job-multi-configs.sh  run-job.sh
cli/pipeline_template/devops/: cicd.yaml
devops/: Dockerfile.launcher  Dockerfile.worker  cicd-template.yaml  generate-cloud-functions-deploy-jobs.sh
devops/load_raw/: cicd.yaml
devops/load_raw/configs/depreciation_vr/: io_configs.json
python/: .pylintrc  mypy.ini  pyproject.toml
python/functions/dealer_perf/: main.py
python/pipelines/load_raw/: arguments_parser.py  job-metadata.json  job_launcher.py  pipeline.py
python/tests/test_dealer_list/: conftest.py  test_function.py
python/tests/test_dealer_list/resources/volvo/: local_dealer_list.csv
python/tests/test_load_raw/: conftest.py  test_end_to_end_load_raw.py
python/tests/test_load_raw/resources/depreciation_vr/: io_configs.json
